# re-minecraft

./: .gitignore  CMakeLists.txt  README.md  justfile  main.cpp
docs/: CODE_HEALTH_REPORT.md  ECS_ARCHITECTURE.md  ECS_SPARSE_SET_IMPLEMENTATION.md  TWO_PASS_TERRAIN_GENERATION_GUIDE.md  VERTICAL_BLOCK_ROTATION_GUIDE.md  block-facing-direction.md  block-outline-implementation.md  chunk-render-pipeline-report.md  chunkmesh-double-buffering.md  collision_guide.md  double-buffering-implementation.md  gravity_guide.md  todos.md  vertex-data-packing.md
lib/flint/: CMakeLists.txt  LICENSE
lib/flint/src/: Flint.hpp  Headers.hpp
lib/flint/src/Colors/: Colors.cpp  Colors.hpp
lib/flint/src/CxxABI/: CxxABI.cpp  CxxABI.hpp
lib/flint/src/Exceptions/: Exceptions.cpp  Exceptions.hpp
lib/flint/src/Init/: Init.cpp  Init.hpp
lib/flint/src/Logging/: Logging.cpp  Logging.hpp
lib/flint/src/hpp/: Inspection.hpp  Preprocessor.hpp
lib/glad/: glad.h
lib/glad/src/: glad.c
resources/Shaders/: FragmentShader.frag  VertexShader.vert
resources/data/blocks/: blocks.json
resources/data/prefabs/: oak_tree_1.json
resources/shaders/: VertexShader.vert
resources/shaders/Entity/: entity.frag  entity.vert
resources/shaders/Item/: item.frag  item.vert
resources/shaders/Outline/: outline.frag  outline.vert
resources/shaders/UI/: ui.frag  ui.vert
resources/shaders/UI/Font/: msdf.frag  msdf.vert
resources/shaders/UIShader/: UIVertexShader.vert  ui.frag
resources/shaders/World/: world.frag  world.vert
resources/shaders/WorldShader/: WorldFragmentShader.frag  world.frag  world.vert
resources/textures/: atlas.psd
resources/textures/font/: font-msdf.json  font.json
src/: main.h
src/Content/BlockRegistry/: BlockRegistry.cpp  BlockRegistry.h  Material.h
src/Content/Chunk/: Chunk.cpp  Chunk.h  ChunkNeighbors.h  ChunkPos.h  ChunkState.h
src/Content/ChunkManager/: ChunkManager.cpp  ChunkManager.h
src/Content/ChunkMesh/: ChunkMesh.cpp  ChunkMesh.h  Vertex.h
src/Content/ChunkMeshManager/: ChunkMeshManager.cpp  ChunkMeshManager.h
src/Content/Chunks/: ChunkNeighbors.h  ChunkPos.h  ChunkState.h
src/Content/Chunks/Chunk/: Chunk.cpp  Chunk.h  ChunkNeighbors.h  ChunkPos.h  ChunkState.h
src/Content/Chunks/ChunkManager/: ChunkManager.cpp  ChunkManager.h
src/Content/Chunks/ChunkMesh/: ChunkMesh.cpp  ChunkMesh.h  Vertex.h
src/Content/Chunks/ChunkMeshManager/: ChunkMeshManager.cpp  ChunkMeshManager.h
src/Content/Components/: Camera.h  CollisionBox.h  Friction.h  Gravity.h  Inventory.h  MeshRef.h  MeshRefComponent.h  MovementComponent.h  Movements.h  PlayerInput.h
src/Content/GUI/: CrosshairVertices.h  GUI.cpp  GUI.h  OutlineVertices.h  RGBA.h
src/Content/GUI/GUIController/: GUIController.cpp  GUIController.h
src/Content/GUI/GUIPanel/: GUIPanel.cpp  GUIPanel.h
src/Content/GUI/Widgets/: AWidget.cpp  AWidget.h
src/Content/Map/: Map.cpp  Map.h  World.cpp  World.h
src/Content/Materials/: Materials.h
src/Content/MeshRegistry/: MeshRegistry.h
src/Content/Meshes/: PlayerMesh.h  ZombieMesh.h
src/Content/Meshes/EntityMeshData/: EntityMeshData.cpp  EntityMeshData.h
src/Content/NeighborAccess/: NeighborAccess.cpp  NeighborAccess.h
src/Content/Player/: Player.cpp  Player.h
src/Content/PlayerController/: PlayerController.cpp  PlayerController.h
src/Content/PrefabRegistry/: PrefabRegistry.cpp  PrefabRegistry.h
src/Content/Registries/: Registries.h
src/Content/Registries/BlockRegistry/: BlockRegistry.cpp  BlockRegistry.h  Material.h
src/Content/Registries/ItemMeshRegistry/: ItemMeshRegistry.cpp  ItemMeshRegistry.h
src/Content/Registries/ItemRegistry/: Item.h  ItemRegistry.cpp  ItemRegistry.h
src/Content/Registries/MeshRegistry/: MeshRegistry.cpp  MeshRegistry.h
src/Content/Registries/PrefabRegistry/: PrefabRegistry.cpp  PrefabRegistry.h
src/Content/Registries/TextureRegistry/: TextureRegistry.cpp  TextureRegistry.h
src/Content/Square/: Square.cpp  Square.h
src/Content/Systems/: CameraSystem.h  CollisionSystem.h  DebugAABBSystem.h  FacingSystem.h  GravitySystem.h  MovementSystem.h  PlayerInputSystem.h  PlayerMovementSystem.h  RenderSystem.h
src/Content/TerrainGenerator/: TerrainGenerator.cpp  TerrainGenerator.h
src/Content/TextureRegistry/: TextureRegistry.cpp  TextureRegistry.h
src/Content/Vertices/: CrosshairVertices.h  OutlineVertices.h  VAOVertices.h
src/Content/World/: World.cpp  World.h
src/Engine/: Engine.cpp  Engine.h  Vertex.h
src/Engine/Camera/: Camera.cpp  Camera.h
src/Engine/CollisionBox/: CollisionBox.cpp  CollisionBox.h
src/Engine/ConcurrentQueue/: ConcurrentQueue.h
src/Engine/Drawer/: Drawer.cpp  Drawer.h
src/Engine/Drawer/CubeVAO/: CubeVAO.cpp  CubeVAO.h
src/Engine/Drawer/EBO/: EBO.cpp  EBO.h
src/Engine/Drawer/Shader/: Shader.cpp  Shader.h
src/Engine/Drawer/Shaders/: Shaders.cpp  Shaders.h
src/Engine/Drawer/Texture/: Texture.cpp  Texture.h
src/Engine/Drawer/VAO/: VAO.cpp  VAO.h
src/Engine/Drawer/VBO/: VBO.cpp  VBO.h
src/Engine/ECS/: Component.h  ECS.h  Entity.h  EntityCreator.h  IComponent.h  IEntity.h  ISystem.h  System.h
src/Engine/ECS/Systems/: MovementSystem.h  RenderSystem.h
src/Engine/FrameTimer/: FrameTimer.cpp  FrameTimer.h
src/Engine/Input/: InputState.h
src/Engine/Raycast/: Raycast.h
src/Engine/Render/Atlas/: Atlas.cpp  Atlas.h
src/Engine/Render/ChunkMesh/: ChunkMesh.cpp  ChunkMesh.h
src/Engine/Render/ChunkMeshManager/: ChunkMeshManager.h
src/Engine/Render/CubeVAO/: CubeVAO.cpp  CubeVAO.h
src/Engine/Render/Font/: Font.cpp  Font.h  MsdfFont.cpp  MsdfFont.h
src/Engine/Render/Frustum/: Frustum.cpp  Frustum.h
src/Engine/Render/Shader/: Shader.cpp  Shader.h
src/Engine/Render/TextureManager/: TextureManager.cpp  TextureManager.h
src/Engine/Render/VAO/: VAO.cpp  VAO.h
src/Engine/Render/VBO/: VBO.cpp  VBO.h
src/Engine/Settings/: Settings.cpp  Settings.h
src/Engine/TextureExtruder/: TextureExtruder.cpp  TextureExtruder.h
src/Engine/ThreadPool/: ThreadPool.cpp  ThreadPool.h
src/Engine/Utils/: DirectionUtils.h  Utils.h
tools/: obj_converter.py
(+10 files in other folders)
